test/good/classes/destructor04.px

class A def
    x: Int

    destructor def
        print "A {this.x}"


class B(A) def
    y: Float

    destructor def
        print "B {this.x} {this.y}"


a: A
a = A()
a = B(1, 2.2)
